mockiato_codegen/tests/ui/method-without-self.stderr
error: The first parameter of a method must be self, so that the trait is object-safe
 --> $DIR/method-without-self.rs:5:12
  |
5 |     fn bar(baz: u64);
  |            ^^^
  |
note: Required because of #[mockable] on the trait declaration
 --> $DIR/method-without-self.rs:4:1
  |
4 | trait Foo {
  | ^^^^^

error: aborting due to previous error

